err/pg13.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pg13'...
Compiling './lib/python3.5/site-packages/pg13/misc.py'...
***   File "./lib/python3.5/site-packages/pg13/misc.py", line 23
    def __getitem__(self,(key,value)): return next(x for x in self if getattr(x,key)==value)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pg13/pg.py'...
***   File "./lib/python3.5/site-packages/pg13/pg.py", line 63
    def transform_specialfield((f,v)):
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pg13/pgmock_dbapi2.py'...
***   File "./lib/python3.5/site-packages/pg13/pgmock_dbapi2.py", line 19
    print 'created db %i' % db_id
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pg13/redismodel.py'...
***   File "./lib/python3.5/site-packages/pg13/redismodel.py", line 95
    print 'getcon todo: lock and recheck'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pg13/sqex.py'...
***   File "./lib/python3.5/site-packages/pg13/sqex.py", line 223
    print ex.limit, ex.offset
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pg13/sqla.py'...
***   File "./lib/python3.5/site-packages/pg13/sqla.py", line 44
    print table_name in connection.connection.connection.db
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pg13/sqparse2.py'...
***   File "./lib/python3.5/site-packages/pg13/sqparse2.py", line 364
    print string
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pg13/stubredis.py'...
***   File "./lib/python3.5/site-packages/pg13/stubredis.py", line 27
    except KeyError: print msg; raise
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pg13/syncmessage.py'...
***   File "./lib/python3.5/site-packages/pg13/syncmessage.py", line 49
    def fkapply(models,pool,fn,missing_fn,(nombre,pkey,field),*args):
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pg13-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pytest-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/test_pg13'...
Compiling './lib/python3.5/site-packages/test_pg13/test_diff.py'...
***   File "./lib/python3.5/site-packages/test_pg13/test_diff.py", line 54
    deltas=diff.word_diff(a,b); print deltas; assert diff.applydiff(a,deltas)==b
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test_pg13/test_pg.py'...
***   File "./lib/python3.5/site-packages/test_pg13/test_pg.py", line 114
    print ebuns.pool.tables['model'].rows
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/test_pg13/test_pgmock.py'...
***   File "./lib/python3.5/site-packages/test_pg13/test_pgmock.py", line 101
    print sqparse2.parse('insert into t1 (a,b,c) values (2,3,(select c from t1 where a=1))')
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test_pg13/test_sqparse2.py'...
***   File "./lib/python3.5/site-packages/test_pg13/test_sqparse2.py", line 56
    print sqparse2.parse('case when 1 then 10 when x=5 then 11 else 5 end')
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ujson-1.35.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
